--------- v4.1.1 ---------

= Fix bug with Optimal Scorecard rendering
= Fix bug with the number of games in "First To" matches
= Fix bug with layout of player selectors
= Fix bug trying to launch a custom match of Dartzee

--------- v4.1.0 ---------

+ In-game stats for Dartzee mode
= Performance improvement: In-game stats no longer need to run SQL
= Performance improvement: Enforce sensible JVM memory settings
= Performance improvement: Calculations during dartzee rule setup might be a little faster...
= Project now built through gradle
= Make dev bar properly hidden when not in use
- Preference for how darts are displayed - always use D20 format
= 54.3% test coverage (7018 / 12,913 lines covered by 1259 tests)

--------- v4.0.1 ---------

= Performance improvement: Top X01 Finishes leaderboard
= Make Dartboard more responsive to clicks
= Fix bug where Dartzee leaderboard sorted the wrong way, and didn't update to include new templates
= Fix truncation error when trying to save custom dart rules
= Fix inconsistency with how games are numbered as part of a match (e.g. in report results)
= 100% Kotlin!
= 52.2% test coverage (7101 / 13,608 lines covered by 1210 tests)

--------- v4.0.0 ---------

+ Dartzee game mode
+ Dartzee Templates, to make Dartzee setup faster and to allow for leaderboards
+ All game modes can now be played with up to 6 players (increased from 4)
= 92.1% Kotlin
= 50.3% test coverage (7002 / 13,912 lines covered by 1172 tests)

--------- v3.2.4 ---------

+ 2 Achievements (Course Master, No Mercy)
= 89.2% Kotlin
= 41.9% test coverage (5428 / 12,956 lines covered by 762 tests)

--------- v3.2.3 ---------

= Clicking on an unfocused game window will no longer place a dart
= New update mechanism through Github API
= Email logs directly from the client (password must be entered once through Utilities screen)
= 83.5% Kotlin
= 39.2% test coverage (5085 / 12,985 lines covered by 699 tests)

--------- v3.2.2 ---------
